--- a/.github/workflows/vue-ci.yml
+++ b/.github/workflows/vue-ci.yml
@@ -1,38 +1,41 @@
 name: Vue CI
 
 on:
-    push:
-        paths-ignore:
-            - 'README.md'
-    pull_request:
-        branches:
-            - '*'
+  push:
+    paths-ignore:
+      - 'README.md'
+  pull_request:
+    branches:
+      - '*'
 
 defaults:
-    run:
-        shell: bash
+  run:
+    shell: bash
 
 jobs:
-    build-and-test:
-        name: Build project
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v3
+  build-and-test:
+    name: Build project
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v2
-              with:
-                  node-version: '18.16.0'
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18.16.0'
 
-            - name: Verify Node.js version
-              run: node -v
+      - name: Verify Node.js version
+        run: node -v
 
-            - name: Install dependencies
-              run: npm install
+      - name: Install dependencies
+        run: npm install
 
-            - name: Build
-              run: npm run build
+      - name: Project Lint
+        run: npm run lint
 
-            - name: GitHub Status Check
-              run: echo "All steps have passed!"
+      - name: Build
+        run: npm run build
+
+      - name: GitHub Status Check
+        run: echo "All steps have passed!"
