--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sb-portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.2",
   "type": "module",
   "scripts": {
     "lint": "prettier --check .",
@@ -13,11 +13,13 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@vueuse/core": "^10.5.0",
+    "uuid": "^9.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
+    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
